--- a/SE_In_Lecture_Coding_1/customerservice/customerservice/src/main/resources/application.properties
+++ b/SE_In_Lecture_Coding_1/customerservice/customerservice/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:postgresql://ep-jolly-glitter-192670.us-east-2.aws.neon.tech/neondb
+spring.datasource.username=OnkarJadhav3009
+spring.datasource.password=dXKi5pQa1mVA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
